Fix text overflow when hovering delete btn

--- a/css/style.css
+++ b/css/style.css
@@ -269,25 +269,25 @@ ul {
 .delete-btn {
     background: red;
     outline: none;
-    border: .0625rem solid black;
+    border: .125rem solid black;
     height: 2.1875rem;
     width: 6.75rem;
-    font-weight: bolder;
+    font-weight: bold;
     font-size: .75rem;
-    -webkit-box-shadow: 0 0 0 .125rem rgba(255, 255, 255, .9) inset;
+    /* -webkit-box-shadow: 0 0 0 .125rem rgba(255, 255, 255, .9) inset;
     -moz-box-shadow: 0 0 0 .125rem rgba(255, 255, 255, .9) inset;
-    box-shadow: 0 0 0 .125rem rgba(255, 255, 255, .9) inset;
+    box-shadow: 0 0 0 .125rem rgba(255, 255, 255, .9) inset; */
     transition: .25s;
 }
 
 .delete-btn:hover {
     background: darkred;
-    outline: none;
-    border: .125rem solid black;
-    font-size: .8rem;
-    -webkit-box-shadow: none;
+    /* outline: none; */
+    /* border: .125rem solid black;
+    font-size: .8rem; */
+    /* -webkit-box-shadow: none;
     -moz-box-shadow: none;
-    box-shadow: none;
+    box-shadow: none; */
 }
 
 .delete-btn:active {
@@ -359,14 +359,14 @@ a {
         font-size: 1.25rem;
         text-transform: uppercase;
         height: 2.45rem;
-        line-height: 2.45rem;
+        line-height: 2.2rem;
         transition: unset;
     }
 
-    .delete-btn:hover {
+    /* .delete-btn:hover {
         font-size: 1.25rem;
         line-height: 2.4rem;
-    }
+    } */
 
     .grid-object {
         order: 1;
